add teste javascript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="paragraphA">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.
       </p>
-      <button>Explore</button>
+      <button id="button">Explore</button>
     </article>
 
     <div class="imgAB">
@@ -43,5 +43,7 @@
       <p class="paragraphB">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
   </section>
+
+  <script src="/script.js"></script>
 </body>
 </html>
